logs/2020_3_22_log.txt

---------------------------------- log of pk 27 : 2020-03-22 01:22:09.422051 ----------------------------------
출력 메시지:
Requirement already up-to-date: pip in ./dataVenv/lib/python3.8/site-packages (20.0.2)

에러 메시지:
-----------------------------------------------------------------------------------------------------------

---------------------------------- log of pk 28 : 2020-03-22 01:23:37.942381 ----------------------------------
출력 메시지:

에러 메시지:
  File "./work/28.py", line 73
    prec = "연수구""" 갑"
                   ^
SyntaxError: invalid syntax
-----------------------------------------------------------------------------------------------------------

---------------------------------- log of pk 29 : 2020-03-22 01:35:57.247739 ----------------------------------
출력 메시지:
Requirement already up-to-date: pip in ./dataVenv/lib/python3.8/site-packages (20.0.2)

에러 메시지:
----------------------------------------------------------------------------------------------------------------
